--- a/style.css
+++ b/style.css
@@ -3,35 +3,42 @@ body {
     background-color: #f0f0f0;
     margin: 0;
     padding: 0;
-    display: flex;
+    /* display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: center; */
     align-items: center;
     height: 100vh;
     text-align: center;
 }
 
+#header {
+    position: fixed;
+    top: 0;
+    left: auto;
+    right: auto;
+    z-index: 100;
+    height: 100px;
+}
+
 .container {
-    max-width: 800px; /* Adjusted max-width for better responsiveness */
-    width: 100%;
-    margin: auto;
+    width: 100vw;
     text-align: center;
-    background-color: #fff; /* Added background color for container */
-    border-radius: 8px; /* Rounded corners for container */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Box shadow for container */
-    padding: 20px;
-    margin-top: 20px; /* Increased margin top for better spacing */
+    background-color: #fff;
+    /* Added background color for container */
+    /* Rounded corners for container */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    /* Box shadow for container */
+    margin-top: 20px;
+    /* Increased margin top for better spacing */
 }
 
 .video-container {
-    position: relative;
-    width: 100%;
     height: 0;
-    padding-bottom: 56.25%; /* 16:9 aspect ratio */
-    margin: 20px 0;
+    padding-bottom: 56.25%;
+    /* 16:9 aspect ratio */
 }
 
-#player {
+/* #player {
     position: absolute;
     top: 0;
     left: 0;
@@ -39,7 +46,14 @@ body {
     height: 100%;
     border: none;
     object-fit: cover;
-    border-radius: 8px; /* Rounded corners for video player */
+    border-radius: 8px;
+    /* Rounded corners for video player */
+
+iframe {
+    width: 100vw;
+    min-height: 580px;
+    height: 100vh;
+    padding: 0;
 }
 
 .location-info {
